--- a/config
+++ b/config
@@ -35,7 +35,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 # Picom
-exec_always --no-startup-id picom -b
+exec_always --no-startup-id picom -b --xrender-sync --xrender-sync-fence
 
 # Background
 exec_always --no-startup-id /home/deltapsi/.fehbg
@@ -131,7 +131,7 @@ set $ws2  "2  "
 set $ws3  "3  "
 set $ws4  "4  "
 set $ws5  "5  "
-set $ws6  "6  "
+set $ws6  "6 FU"
 set $ws7  "7  "
 set $ws8  "8  "
 set $ws9  "9  "
